syntax = "proto3";

package proto;

option go_package = "gophkeeper/proto";

message RegisterRequest {
  string login = 1;
  string password = 2;
}

message RegisterResponse {
  string token = 1;
  string error = 2;
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string error = 2;
}

service User {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}